examples/invalid_programs/invalid_structs.ypc
struct InvalidT {
    x int
    x int
    y int
    z int
}

struct Person {
    id NonExistentT
}
